--- a/package.json
+++ b/package.json
@@ -12,7 +12,20 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "koa": "^2.0.0-alpha.7"
+    "react": "^15.4.2",
+    "react-dom": "^15.4.2",
+    "koa": "^2.0.0-alpha.7",
+    "koa-mount": "^2.0.0",
+    "koa-router": "^7.0.1",
+    "koa-static": "^3.0.0",
+    "koa-views": "^5.2.0",
+    "node-sass": "^4.3.0",
+    "nunjucks": "^3.0.0",
+    "redux-thunk": "^2.1.0",
+    "react-router": "^3.0.1",
+    "xss": "^0.3.3",
+    "underscore": "^1.8.3",
+    "rimraf": "^2.5.4"
   },
   "devDependencies": {
     "babel-cli": "^6.18.0",
@@ -29,42 +42,29 @@
     "eslint": "^3.13.1",
     "eslint-plugin-babel": "^4.0.0",
     "eslint-plugin-react": "^6.9.0",
-    "express": "^4.14.0",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.9.0",
     "html-webpack-plugin": "^2.26.0",
     "imagemin-webpack-plugin": "^1.4.4",
     "json-loader": "^0.5.4",
-    "koa-mount": "^2.0.0",
-    "koa-router": "^7.0.1",
-    "koa-static": "^3.0.0",
-    "koa-views": "^5.2.0",
-    "node-sass": "^4.3.0",
     "nodemon": "^1.11.0",
-    "nunjucks": "^3.0.0",
     "postcss": "^5.2.10",
     "postcss-browser-reporter": "^0.5.0",
     "postcss-cssnext": "^2.9.0",
     "postcss-loader": "^1.2.2",
     "postcss-reporter": "^3.0.0",
-    "react": "^15.4.2",
-    "react-dom": "^15.4.2",
     "react-hot-loader": "^3.0.0-beta.6",
     "react-redux": "^5.0.2",
     "react-router": "^3.0.1",
     "react-router-redux": "^4.0.7",
     "redux": "^3.6.0",
     "redux-devtools-extension": "^1.0.0",
-    "redux-thunk": "^2.1.0",
-    "rimraf": "^2.5.4",
     "sass-loader": "^4.1.1",
     "style-loader": "^0.13.1",
     "superagent": "^3.3.2",
-    "underscore": "^1.8.3",
     "url-loader": "^0.5.7",
     "webpack": "^1.14.0",
     "webpack-dev-middleware": "^1.9.0",
-    "webpack-hot-middleware": "^2.15.0",
-    "xss": "^0.3.3"
+    "webpack-hot-middleware": "^2.15.0"
   }
 }
