--- a/package.json
+++ b/package.json
@@ -42,8 +42,8 @@
     "eslint": "^3.13.1",
     "eslint-plugin-babel": "^4.0.0",
     "eslint-plugin-react": "^6.9.0",
-    "extract-text-webpack-plugin": "^1.0.1",
-    "file-loader": "^0.9.0",
+    "extract-text-webpack-plugin": "^2.0.0-rc.2",
+    "file-loader": "^0.10.0",
     "html-webpack-plugin": "^2.26.0",
     "imagemin-webpack-plugin": "^1.4.4",
     "json-loader": "^0.5.4",
@@ -58,12 +58,12 @@
     "react-router": "^3.0.1",
     "react-router-redux": "^4.0.7",
     "redux": "^3.6.0",
-    "redux-devtools-extension": "^1.0.0",
+    "redux-devtools-extension": "^2.0.0",
     "sass-loader": "^4.1.1",
     "style-loader": "^0.13.1",
     "superagent": "^3.3.2",
     "url-loader": "^0.5.7",
-    "webpack": "^1.14.0",
+    "webpack": "^2.2.1",
     "webpack-dev-middleware": "^1.9.0",
     "webpack-hot-middleware": "^2.15.0"
   }
