--- a/package.json
+++ b/package.json
@@ -12,8 +12,6 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "react": "^15.4.2",
-    "react-dom": "^15.4.2",
     "koa": "^2.0.0-alpha.7",
     "koa-mount": "^2.0.0",
     "koa-router": "^7.0.1",
@@ -21,11 +19,13 @@
     "koa-views": "^5.2.0",
     "node-sass": "^4.3.0",
     "nunjucks": "^3.0.0",
-    "redux-thunk": "^2.1.0",
+    "react": "^15.4.2",
+    "react-dom": "^15.4.2",
     "react-router": "^3.0.1",
-    "xss": "^0.3.3",
+    "redux-thunk": "^2.1.0",
+    "rimraf": "^2.5.4",
     "underscore": "^1.8.3",
-    "rimraf": "^2.5.4"
+    "xss": "^0.3.3"
   },
   "devDependencies": {
     "babel-cli": "^6.18.0",
@@ -44,6 +44,7 @@
     "eslint-plugin-react": "^6.9.0",
     "extract-text-webpack-plugin": "^2.0.0-rc.2",
     "file-loader": "^0.10.0",
+    "fsevents": "^1.0.17",
     "html-webpack-plugin": "^2.26.0",
     "imagemin-webpack-plugin": "^1.4.4",
     "json-loader": "^0.5.4",
