--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "lint": "eslint ./src",
+    "lint": "eslint ./src && eslint ./config && eslint ./server",
     "dev": "NODE_ENV=development nodemon ./bin/server --ignore ./src --exec babel-node",
     "build": "rimraf dist && NODE_ENV=production webpack -p --progress --colors --config ./webpack.config.babel.js",
     "serve": "NODE_ENV=production babel-node ./bin/server"
