--- a/package.json
+++ b/package.json
@@ -4,7 +4,12 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "lint": "eslint ./src && eslint ./config && eslint ./server",
+    "lint": "npm run lint:app && npm run lint:server",
+    "lint:app": "eslint ./src && eslint ./config",
+    "lint:server": "eslint ./server",
+    "test": "npm run test:app && npm run test:server",
+    "test:app": "mocha -w src/test/helpers/browser src/**/*.test.js --compilers js:babel-register --require babel-polyfill",
+    "test:server": "",
     "dev": "NODE_ENV=development nodemon ./bin/server --ignore ./src --exec babel-node",
     "build": "npm run lint && rimraf dist && NODE_ENV=production webpack -p --progress --colors --config ./webpack.config.babel.js",
     "serve": "NODE_ENV=production babel-node ./bin/server"
@@ -37,8 +42,11 @@
     "babel-preset-react-hmre": "^1.1.1",
     "babel-preset-react-optimize": "^1.0.1",
     "babel-preset-stage-0": "^6.16.0",
+    "chai": "^3.5.0",
     "copy-webpack-plugin": "^4.0.1",
     "css-loader": "^0.26.1",
+    "enzyme": "^2.7.1",
+    "enzyme-redux": "^0.1.6",
     "eslint": "^3.14.1",
     "eslint-config-airbnb": "^14.0.0",
     "eslint-plugin-babel": "^4.0.0",
@@ -50,19 +58,24 @@
     "fsevents": "^1.0.17",
     "html-webpack-plugin": "^2.26.0",
     "imagemin-webpack-plugin": "^1.4.4",
+    "jsdom": "^9.9.1",
     "json-loader": "^0.5.4",
+    "mocha": "^3.2.0",
+    "nock": "^9.0.2",
     "nodemon": "^1.11.0",
     "postcss": "^5.2.10",
     "postcss-browser-reporter": "^0.5.0",
     "postcss-cssnext": "^2.9.0",
     "postcss-loader": "^1.2.2",
     "postcss-reporter": "^3.0.0",
+    "react-addons-test-utils": "^15.4.2",
     "react-hot-loader": "^3.0.0-beta.6",
     "react-redux": "^5.0.2",
     "react-router": "^3.0.1",
     "react-router-redux": "^4.0.7",
     "redux": "^3.6.0",
     "redux-devtools-extension": "^2.0.0",
+    "redux-test-utils": "^0.1.2",
     "sass-loader": "^4.1.1",
     "style-loader": "^0.13.1",
     "superagent": "^3.3.2",
